--- a/09-Data-Structures-Operators/starter/index.html
+++ b/09-Data-Structures-Operators/starter/index.html
@@ -35,6 +35,6 @@
   <body>
     <h1>Data Structures and Modern Operators</h1>
     <!-- <script src="script.js"></script> -->
-    <script src="119-Map Iteration.js"></script>
+    <script src="./challenge/challenge-4.js"></script>
   </body>
 </html>
