135(I)-the bind method
2 use cases:
// Use case 1: With event listeners
lufthansa.planes = 300;
lufthansa.buyPlane = function () {
  console.log(this);
  this.planes++;
  console.log(this.planes);
};

document
  .querySelector('.buy')
  .addEventListener('click', lufthansa.buyPlane.bind(lufthansa)); // 302

Use case 2: Partial application
const bookEW23 = book.bind(eurowings, 23);

const addTax = (rate, value) => value + value * rate;
console.log(addTax(0.1, 200)); // 220

const addVAT = addTax.bind(null, 0.23);
// addVAT = value => value + value * 0.23;

console.log(addVAT(100)); // 123

--- a/10-Functions/starter/index.html
+++ b/10-Functions/starter/index.html
@@ -40,6 +40,6 @@
     <h1>A Closer Look at Functions</h1>
     <button class="buy">Buy new plane 🛩</button>
     <button class="poll">Answer poll ⁉️</button>
-    <script src="./132-Functions accepting callback functions.js"></script>
+    <script src="./135-The bind method.js"></script>
   </body>
 </html>
