--- a/11-Arrays-Bankist/starter/index.html
+++ b/11-Arrays-Bankist/starter/index.html
@@ -123,6 +123,6 @@
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
 
-    <script src="script.js"></script>
+    <script src="./147-mini project: Bankist App.js"></script>
   </body>
 </html>
