p221: Inheritance between classes: ES6 Classes

--- a/14-OOP/starter/index.html
+++ b/14-OOP/starter/index.html
@@ -22,7 +22,7 @@
         color: white;
       }
     </style>
-    <script defer src="./220-challenge 3(inheritance).js"></script>
+    <script defer src="./221-Inheritance between classes: ES6 classes.js"></script>
   </head>
   <body>
     <h1>Object Oriented Programming (OOP) With JavaScript</h1>
