p187(Important)-Selecting, Creating and Deleting elements
document is not real dom element, it is a global object that represents the entire html document.

NodeList vs HTMLCollection

.insertAdjacentHTML
myDiv.insertAdjacentHTML('beforeend', '<p>At the end</p>');

// prepend adds the element as the first child of the header
// The element can only be at one place at a time, so if we prepend it, it will be removed from the dom if we append
// header.prepend(message);
header.append(message);

// header.append(message.cloneNode(true));

// header.before(message);
// header.after(message);

// Delete elements
document
  .querySelector('.btn--close-cookie')
  .addEventListener('click', function () {
    message.remove();
    // DOM traversing
    // message.parentElement.removeChild(message);
  });

--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -351,5 +351,6 @@
     <div class="overlay hidden"></div>
 
     <script src="script.js"></script>
+    <script src="p187-selecting, creating and deleting elements.js"></script>
   </body>
 </html>
