p188-styles, attributes and classes
// Styles
// to set the inline style, we use the style property
message.style.backgroundColor = '#37383d';
message.style.width = '120%';

// There is no output, because it only works for inline styles and not for styles in the css file
console.log(message.style.height);
console.log(message.style.backgroundColor);

console.log(getComputedStyle(message));
console.log(getComputedStyle(message).height);

message.style.height =
  Number.parseFloat(getComputedStyle(message).height, 10) + 30 + 'px';

// document.documentElement is the root element of the document, which is the html element
document.documentElement.style.setProperty('--color-primary', 'orangered');

// Attributes
const logo = document.querySelector('.nav__logo');
// Log the standard attributes(properties) of the element
// This will log the absolute path of the image
console.log(logo.src);
console.log(logo.alt);

// Non-standard attributes
console.log(logo.designer); //undefined
console.log(logo.getAttribute('designer'));
logo.setAttribute('company', 'Bankist');

const link = document.querySelector('.twitter-link');
console.log(link.href);
console.log(link.getAttribute('href'));

// Data attributes
// We can create our own attributes by using data-<name>
// There are always stored in dataset
console.log(logo.dataset.versionNumber);

// Classes
logo.classList.add('c1', 'c2');
logo.classList.remove('c1');
logo.classList.toggle('c1');
logo.classList.contains('c1'); // not includes like in arrays or in the classList

// Don't use this!! It will overwrite all existing classes!
// logo.className = 'jonas';

--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -21,6 +21,8 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
+          designer="Finn"
+          data-version-number="3.0"
         />
         <ul class="nav__links">
           <li class="nav__item">
@@ -319,7 +321,7 @@
           <a class="footer__link" href="#">Contact Us</a>
         </li>
       </ul>
-      <img src="img/icon.png" alt="Logo" class="footer__logo" />
+      <img src="img/icon.png" alt="Logo" class="footer__logo" designer="Finn" />
       <p class="footer__copyright">
         &copy; Copyright by
         <a
@@ -351,6 +353,7 @@
     <div class="overlay hidden"></div>
 
     <script src="script.js"></script>
-    <script src="p187-selecting, creating and deleting elements.js"></script>
+    <!-- <script src="p187-selecting, creating and deleting elements.js"></script> -->
+    <script src="p188-styles, attributes and classes.js"></script>
   </body>
 </html>
