p190-Types of events and Event Handlers
btnScrollTo.addEventListener('click', function (e) {
  const s1coords = section1.getBoundingClientRect();
  console.log(s1coords);
  console.log(e.target.getBoundingClientRect());

  console.log('Current scroll (X/Y)', window.scrollX, window.scrollY);

  // log the height and width of the viewport
  console.log(
    'height/width viewport',
    document.documentElement.clientHeight,
    document.documentElement.clientWidth
  );

  // Scrolling
  // window.scrollTo({
  //   left: s1coords.left + window.scrollX,
  //   top: s1coords.top + window.scrollY,
  //   behavior: smooth,
  // });

  // Modern way of scrolling
  section1.scrollIntoView({ behavior: 'smooth' });
});

--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -354,6 +354,6 @@
 
     <script src="script.js"></script>
     <!-- <script src="p187-selecting, creating and deleting elements.js"></script> -->
-    <script src="p188-styles, attributes and classes.js"></script>
+    <!-- <script src="p188-styles, attributes and classes.js"></script> -->
   </body>
 </html>
