194-building a tabbed component
const tabsContainer = document.querySelector('.operations__tab-container');

// Tabbed component
const tabs = document.querySelectorAll('.operations__tab');
const tabsContent = document.querySelectorAll('.operations__content');

// tabsContainer.forEach(t => t.addEventListener('click', () => {}));

tabsContainer.addEventListener('click', function (e) {
  const clicked = e.target.closest('.operations__tab');
  console.log(clicked);

  // Guard clause
  if (!clicked) return;

  // Remove active classes
  tabs.forEach(t => t.classList.remove('operations__tab--active'));
  clicked.classList.add('operations__tab--active');
  tabsContent.forEach(c => c.classList.remove('operations__content--active'));

  // Activate content area
  document
    .querySelector(`.operations__content--${clicked.dataset.tab}`)
    .classList.add('operations__content--active');
});

--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -352,9 +352,9 @@
     </div>
     <div class="overlay hidden"></div>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
     <!-- <script src="p187-selecting, creating and deleting elements.js"></script> -->
     <!-- <script src="p188-styles, attributes and classes.js"></script> -->
-    <script src="P194-DOM traversing.js"></script>
+    <!-- <script src="P194-DOM traversing.js"></script> -->
   </body>
 </html>
