--- a/16-Asynchronous/starter/index.html
+++ b/16-Asynchronous/starter/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <!-- <script defer src="script.js"></script> -->
-    <script defer src="./252-promises.js"></script>
+    <!-- <script defer src="./252-promises.js"></script> -->
+    <script defer src="./Coding challenge1.js"></script>
     <title>Asynchronous JavaScript</title>
   </head>
   <body>
